# rgmatch-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  SHARED_TASK_NOTES.md
.github/workflows/: ci.yml
scripts/: compare_outputs.py  verify_matches.py
src/: config.rs  lib.rs  main.rs  output.rs  types.rs
src/matcher/: mod.rs  overlap.rs  rules.rs  tss.rs
src/parser/: bed.rs  gtf.rs  mod.rs  util.rs
tests/: benchmark.sh  benchmark_diagnose.sh  benchmark_profile.sh  benchmark_tuning.sh  integration_test.rs  unit_tests.rs  verify_output.sh
tests/data/: subset_golden_output_exon.txt  subset_golden_output_gene.txt  subset_golden_output_transcript.txt  subset_peaks.bed
tests/logs/: bench_report.md  diag_time.txt  profile_metrics.txt
