[package]
name = "rgmatch"
version = "0.1.0"
edition = "2021"
authors = ["rgmatch-rs authors"]
description = "Genomic region-to-gene matching tool"
license = "MIT"
repository = "https://github.com/tianyuan/rgmatch-rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
anyhow = "1"
ahash = "0.8"
indexmap = "2.13.0"
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "rgmatch"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

